# legacy-pokemon-transfer

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  chromatic_mrupdater_notes.md  flashgbx_setup.md  known_limitations.md  save_format_notes.md
packaging/windows/: LegacyPokemonTransfer.iss  launcher.py
scripts/: build_windows.ps1
src/legacy_migration/: __init__.py  cli.py  errors.py  hashing.py  migration_package.py  models.py  save_reader.py  ui.py
src/legacy_migration/gen1/: __init__.py  boxes.py  constants.py  detection.py  pokemon.py  species.py  text_codec.py  trainer.py  validation.py
src/legacy_migration/gen2/: __init__.py  constants.py  detection.py  pokemon.py  species.py  trainer.py  validation.py
tests/: conftest.py  test_cli.py  test_detection.py  test_gen2_detection.py  test_gen2_pokemon.py  test_gen2_trainer.py  test_hashing.py  test_migration_package.py  test_pokemon.py  test_save_source.py  test_text_codec.py  test_trainer.py
tests/fixtures/: README.md
