[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "legacy-pokemon-migration"
version = "0.1.1"
description = "Software-only proof of concept for read-only legacy Pokemon save migration candidates."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Prototype Maintainers" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.10",
]
build = [
  "pyinstaller>=6.0",
]

[project.scripts]
legacy-migration = "legacy_migration.cli:main"
legacy-migration-ui = "legacy_migration.ui:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.hatch.build.targets.wheel]
packages = ["src/legacy_migration"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
